--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,9 @@
     "trailingComma": "es5",
     "tabWidth": 2,
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": [
+        "prettier-plugin-tailwindcss"
+    ]
 
 }
