--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
@@ -34,6 +35,7 @@
     "react-day-picker": "^9.13.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
+    "react-number-format": "^5.4.3",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^2.15.4",
